@@ -86,7 +86,7 @@ extern bool set_writehaof;
 extern bool set_append;
 extern char *set_append_filename;
 extern bool set_nonsequential;
-extern bool set_warn_surpressions;
+extern bool set_warn_suppressions;
 extern bool set_files_by_thread;
 extern bool set_href_detection;
 extern bool set_mbox_shortened;
